// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete preview image 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__preview">
      <div class="r-image r-upload__preview-image"
           style="width: 30px; height: 30px;"
      >
        <img src="https://fastly.jsdelivr.net/npm/@ryxon/assets/cat.jpeg"
             class="r-image__img"
             style="object-fit: cover;"
        >
        <div class="r-image__loading">
          <i class="r-badge__wrapper r-icon r-image__loading-icon">
          </i>
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__upload"
         style="width: 30px; height: 30px;"
    >
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`disable preview image 2`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__preview">
      <div class="r-upload__file">
        <i class="r-badge__wrapper r-icon r-upload__file-icon">
        </i>
        <div class="r-upload__file-name r-ellipsis">
          test.jpg
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`file message should be reactive 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__preview">
      <div class="r-image r-upload__preview-image">
        <img src="https://fastly.jsdelivr.net/npm/@ryxon/assets/cat.jpeg"
             class="r-image__img"
             style="object-fit: contain;"
        >
        <div class="r-image__loading">
          <i class="r-badge__wrapper r-icon r-image__loading-icon">
          </i>
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__preview">
      <div class="r-image r-upload__preview-image">
        <img src="https://fastly.jsdelivr.net/npm/@ryxon/assets/cat.jpeg"
             class="r-image__img"
             style="object-fit: cover;"
        >
        <div class="r-image__loading">
          <i class="r-badge__wrapper r-icon r-image__loading-icon">
          </i>
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__preview">
      <div class="r-upload__file">
        <i class="r-badge__wrapper r-icon r-upload__file-icon">
        </i>
        <div class="r-upload__file-name r-ellipsis">
          https://fastly.jsdelivr.net/npm/@ryxon/assets/test.pdf
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__preview">
      <div class="r-upload__file">
        <i class="r-badge__wrapper r-icon r-upload__file-icon">
        </i>
        <div class="r-upload__file-name r-ellipsis">
          test.jpg
        </div>
      </div>
      <div role="button"
           class="r-upload__preview-delete r-upload__preview-delete--shadow"
           tabindex="0"
           aria-label="Delete"
      >
        <i class="r-badge__wrapper r-icon r-upload__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`should not render upload input when using readonly prop 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__upload r-upload__upload--readonly">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
    </div>
  </div>
</div>
`;

exports[`should render preview-cover slot correctly 1`] = `
<div class="r-upload__preview-cover">
  Custom Preview Cover
</div>
`;

exports[`should render preview-delete slot correctly 1`] = `
<div role="button"
     class="r-upload__preview-delete"
     tabindex="0"
     aria-label="Delete"
>
  Custom Preview Delete
</div>
`;

exports[`upload-icon prop 1`] = `
<div class="r-upload">
  <div class="r-upload__wrapper">
    <div class="r-upload__upload">
      <i class="r-badge__wrapper r-icon r-upload__upload-icon">
      </i>
      <input type="file"
             class="r-upload__input"
             accept="image/*"
      >
    </div>
  </div>
</div>
`;
